style/cart.css
textarea {
    resize: none;
}
.order-form select{
    border-radius: 5px 5px 5px 5px;
    border-color: rgb(243, 243, 243);
    border-width: 1px 1px 1px 1px; 
    height: 30px;
}
.order-form-inputs{
    display: grid;
    grid-auto-flow: row;
    margin-bottom: 10px;
}
.order-form input, textarea{
    padding: 10px;
    border-radius: 5px;
    border: 0.5px solid #e0e0e0;
    margin-bottom: 10px;
}
.order-form span{
    font-size: 12px;
    font-weight: bold;
}
.order-form button{
    padding: 10px;
    border-radius: 5px;
    color: white;
    border: 0.5px solid #34C759;
    background-color: #34C759;
    font-weight: bold;
    font-size: 12px;
    margin-top: 10px;
}
.cart{
    display: flex;
    padding: 64px;
    padding-top: 160px;
    /* background-color: red; */
}
@media only screen and (max-width: 800px) {
    .cart-product-list{
        width: 90% !important;
    }
    .order-form{
        width: 90% !important;
        margin-top: 30px;
    }
    .cart{
        display: inline-block;
    }
}
@media only screen and (max-width: 600px) {
    .product-cart-card-image, .product-card-image{
        display: none !important;
    }
    .product-cart-card-info{
        padding: 10px;
    }
}
@media only screen and (max-width: 400px) {
    .cart{
        padding: 0 !important;
    }
    .cart-product-list{
        width: 80% !important;
        margin: auto !important;
        margin-bottom: 20px;
    }
    .order-form{
        width: 80% !important;
        margin: auto !important;
        padding: 20px !important;
        /* background-color: red; */
    }
}
.order-form{
    display: grid;
    grid-auto-flow: row;
    width: 30%;
    background-color: rgb(241, 241, 241);
    border-radius: 5px;
    padding: 30px;
    /* background-color: red; */
}
.cart-product-list{
    display: grid;
    grid-auto-flow: row;
    width: 70%;
    padding: 30px;
    height: 400px;
    overflow: scroll;
    overflow-x: hidden;
    /* background-color: aqua; */
}
.product-cart-card-action-button, .order-form button:hover{
    cursor: pointer;
}
.product-cart-card-action-button{
    text-align: center;
    font-size: 25px;
    height: 25px;
    width: 25px;
    background-color: white;
    border: none;
}
#amount{
    text-align: center;
    padding-left: 10px;
}
.product-cart-card{
    /* background-color: red; */
    width: 100%;
    height: 122px;
    display: flex;
    border: 0.5px solid #e0e0e0;
    border-radius: 5px;
    margin-bottom: 10px;
}
.product-cart-card div{
    display: grid;
    grid-auto-flow: row;
}
.product-cart-card-info{
    width: 80%;
    /* padding: 90px 60px 90px 60px; */
    /* background-color: yellow; */
}
.product-cart-card-image{
    width: 20%;
    /* display: none; */
    /* background-color: green; */
}
.product-cart-card-image img{
    width: 85%;
    padding: 10px;
}
#product-cart-title{
    /* background-color: red; */
    font-weight: bold;
    font-size: 12px;
    margin-bottom: 1px;
}
#product-cart-price{
    /* background-color: green; */
    font-weight: bolder;
    font-size: 22px;
    margin-top: 0;
    margin-bottom: 1px;
}
#product-cart-description{
    /* background-color: pink; */
    font-weight: lighter;
    font-size: 11px;
    margin-top: 0;
    margin-bottom: 0;
}
.product-cart-card-actions{
    margin-top: 0;
    display: flex !important;
}
.product-cart-card-actions span{
    display: grid;
    grid-auto-flow: column;
    letter-spacing: 10px;
    font-size: 22px;
}

